<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.zhengdianfang.dazhongbao.views.login.LoginFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/loginLogoImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/login_logo"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneEditText"
        style="@style/AppTheme.EditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:drawableLeft="@drawable/activity_login_phone"
        android:drawablePadding="12dp"
        android:hint="@string/please_input_phonenumber"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="32dp" />


    <EditText
        android:id="@+id/passwordEditText"
        style="@style/AppTheme.EditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:drawableLeft="@drawable/activity_login_password"
        android:drawablePadding="13dp"
        android:hint="@string/please_input_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/findPasswordTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="32dp" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:elevation="0dp"
        android:textStyle="bold"
        android:text="@string/activity_login_button_text"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/findPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activit_login_find_password"
        android:textColor="@color/c_a0a0a0"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="315dp" />

    <Button
        android:id="@+id/weixinButton"
        style="@style/AppTheme.Login.ThirdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="42dp"
        android:drawableTop="@drawable/activity_login_weixin_button"
        android:text="@string/activity_weixin_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="74dp" />

    <Button
        android:id="@+id/organizationButton"
        style="@style/AppTheme.Login.ThirdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="41dp"
        android:drawableTop="@drawable/activity_login_organization_button"
        android:text="@string/activity_organization_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="250dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/weixinButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="32dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@drawable/activity_login_fast_login_dirver_line" />

        <View
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:background="@drawable/activity_login_fast_login_dirver_cricle" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/c_a0a0a0"
            android:text="@string/activit_login_fast_funcation"
            android:textSize="16sp" />

        <View
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:background="@drawable/activity_login_fast_login_dirver_cricle" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@drawable/activity_login_fast_login_dirver_line" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
