<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">大宗宝</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="please_input_phonenumber">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="activity_login_button_text">登录</string>
    <string name="activit_login_find_password">找回密码</string>
    <string name="activit_login_fast_funcation">快捷登录</string>
    <string name="activity_weixin_button_text">微信登录</string>
    <string name="activity_organization_button_text">机构注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_modify_password">修改密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_confirm_password">再次输入密码</string>
    <string name="submit_button_text">提交</string>
    <string name="fragment_set_password">设置密码</string>
    <string name="phone_china_code">86</string>
    <string name="get_verify_sms_code">获取验证码</string>
    <string name="please_input_legal_phonenumber">请输入有效的手机号</string>
    <string name="please_input_legal_password">密码格式不正确</string>
    <string name="toast_login_success"><![CDATA[登录成功]]></string>
    <string name="fragment_register_recommend">推荐人手机号(非必填)</string>
    <string name="please_input_sms_code">请输入验证码</string>
    <string name="toast_sms_code_send_successful">验证码已发至您的手机，请查看</string>
    <string name="toast_register_successful">注册成功</string>
    <string name="button_diable_timer_alert">%d秒</string>
    <string name="toast_input_confirm_password_not_equal">密码不一致</string>
    <string name="toast_set_password_successful">设置成功</string>
    <string name="bottom_bar_home_title">首页</string>
    <string name="bottom_bar_auction_title">竞拍</string>
    <string name="bottom_bar_push_title"><![CDATA[ 发布]]></string>
    <string name="bottom_bar_personal_title">我的</string>
    <string name="fragment_personal_may_product">我的大宗</string>
    <string name="fragment_personal_my_start">感兴趣</string>
    <string name="fragment_personal_my_aucation">我的竞拍</string>
    <string name="fragment_personal_setting">设置</string>
    <string name="fragment_personal_pater">合伙人</string>
    <string name="fragment_personal_margin">保证金</string>
    <string name="fragment_phonenumber_verify">手机号验证</string>
    <string name="fragment_set_organization_info">机构身份验证</string>
    <string name="organization_name">机构名称</string>
    <string name="organization_contact_name">联系人</string>
    <string name="licence_card">营业执照</string>
    <string name="please_input_contact_name">请输入联系人姓名</string>
    <string name="please_select_business_card_photo">请选择营业执照图片</string>
    <string name="please_select_contact_card_front_photo">请选择身份证正面图片</string>
    <string name="please_select_contact_card_back_photo">请选择身份证反面图片</string>
    <string name="please_input_company_name">请输入机构名称</string>
    <string name="contact_info_title">使用人信息</string>
    <string name="upload_business_card">上传名片</string>
    <string name="contact_verify_info">个人实名认证</string>
    <string name="id_card_front">身份证正面</string>
    <string name="id_card_backend">身份证反面</string>
    <string name="upload_business_card_success">上传成功</string>
    <string name="upload_card_contact_success">上传成功, 正在审核...</string>
    <string name="activity_setting_title">设置</string>
    <string name="share_title">分享</string>
    <string name="setting_account_and_secutry">账户与安全</string>
    <string name="setting_new_message_notifction">新消息通知</string>
    <string name="setting_notifaction_show_detail">通知显示消息详情</string>
    <string name="setting_shock">震动</string>
    <string name="setting_ring">声音</string>
    <string name="setting_about">关于</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_user_agreement">用户协议</string>
    <string name="setting_password_modify">密码修改</string>
    <string name="setting_phoneNumber_modify">绑定手机号修改</string>
    <string name="activity_personal_information">个人资料</string>
    <string name="activity_personal_user_name">姓名</string>
    <string name="activity_personal_user_header">头像</string>
    <string name="activity_personal_verify_info">认证信息</string>
    <string name="activity_personal_company_name">所在公司</string>
    <string name="activity_personal_company_positon">职位</string>
    <string name="activity_personal_company_email">邮箱</string>
    <string name="activity_personal_company_location">公司地址</string>
    <string name="fragment_personal_upgrade_vip">升级</string>
    <string name="product_item_to_sell">出让 %s 股</string>
    <string name="stock_unit">股</string>
    <string name="product_item_will_pay_price">意向价格 %s 元</string>
    <string name="sold_count_value">%s万</string>
    <string name="price_unit_value">￥%s</string>
    <string name="un_attention">+ 感兴趣</string>
    <string name="attentioned">已关注</string>
    <string name="fragment_home_tab_new_product_title">最新项目</string>
    <string name="fragment_home_tab_completed_product_title">已成交项目</string>
    <string name="fragment_home_deal_count_label">累计成交: %d万   对接项目：%d例</string>
    <string name="fragment_personal_anonymous_user">匿名用户</string>
    <string name="fragment_personal_certified_member">认证会员</string>
    <string name="fragment_personal_normal_member">普通会员</string>
    <string name="setting_logout">退出登录</string>
    <string name="modify_password_success">修改成功</string>
    <string name="next_step_label">下一步</string>
    <string name="please_input_login_password">请输入登录密码</string>
    <string name="fragment_modify_phonenumber">绑定手机号修改</string>
    <string name="activity_push_title">发布项目</string>
    <string name="please_input_shares_code">请输入股票代码</string>
    <string name="fragment_push_reverse_price">底价</string>
    <string name="the_smallest_unit_is_divided">(精确到分)</string>
    <string name="fragment_push_sale_count">卖出数量</string>
    <string name="the_smallest_unit_is_one_share">(精确到1股)</string>
    <string name="fragment_push_share_unit">股</string>
    <string name="fragment_push_price_unit">元 / 股</string>
    <string name="fragment_push_limit_label">买方限售6个月</string>
    <string name="yes_label">是</string>
    <string name="no_label">否</string>
    <string name="fragment_push_company_owner">持股方名称</string>
    <string name="please_input_company_owner_name">请输入股方名称</string>
    <string name="fragment_push_detail">备注</string>
    <string name="push_label">发布</string>
    <string name="please_input_basic_unit_price">请输入底价</string>
    <string name="please_input_sold_count">请输入卖出数量</string>
    <string name="push_success">发布成功</string>
    <string name="actvity_productdetail_yestoday_earnings">昨日收益（元）</string>
    <string name="actvity_productdetail_sold_count">出让数量（股）</string>
    <string name="actvity_productdetail_sold_limit">限售6个月</string>
    <string name="online_label">在线</string>
    <string name="call_lable">电话</string>
    <string name="waiting_auction">等待开拍</string>
    <string name="push_confirm_dialog_content">授权大宗宝为（%1$s）持有股份大宗交易的唯一信息中介服务商，期限%2$d个月</string>
    <string name="authorization_agreement">授权协议</string>
    <string name="agreeAndSubmit">同意并提交</string>
    <string name="push_success_content">您的项目正在审核， 24小时内将有工作人员与您联系。</string>
    <string name="fragment_push_shares_code">股票代码</string>
    <string name="product_status_complete">已结束</string>
    <string name="product_status_bid">出价</string>
    <string name="product_status_margin">支付保证金</string>
    <string name="product_status_verify">项目核调中</string>
    <string name="product_status_itention">提交竞标意向</string>
    <string name="product_status_itention_info">项目已完成核调，正在排期</string>
    <string name="product_status_waiting_start">等待开拍</string>
    <string name="product_status_auctioning">正在竞拍中</string>
    <string name="start_auction_price">起拍价：%s 元</string>
    <string name="finish_auction_time">截拍：%s</string>
    <string name="now_price">当前价：%s</string>
    <string name="now_price_label">当前叫价：%s 元</string>
    <string name="product_status_intention_info">项目已完成核调，正在排期</string>
    <string name="product_status_auctioning_no_bid">您未支付保证金，无法查看出价过程 ...</string>
    <string name="product_status_waiting_start_info">即将开拍，倒计时：%s</string>
    <string name="remove_label">移除</string>
    <string name="fragment_bid_intention_title">竞价意向</string>
    <string name="agree_and_submit_license">同意协议并提交</string>
    <string name="total_price_label">合计：%s</string>
    <string name="my_product_title">我的大宗</string>
    <string name="status_label">状态： %s</string>
    <string name="status_verifing_label">信息审核中</string>
    <string name="ready_beal_status">等待交割</string>
    <string name="verify_fail_status">审核没通过</string>
    <string name="pay_label">支付</string>
    <string name="my_product_item_total_price_label">合计: %s万元</string>
    <string name="detail_more_label">明细</string>
    <string name="auction_success_total_count">成功竞拍：%s万股</string>
    <string name="my_start_gap_time">%1$s天%2$s小时</string>
    <string name="my_start_gap_label">距离开拍：%s</string>
    <string name="top_price_label">最高价</string>
    <string name="confirm_pay_title">支付确认</string>
    <string name="bond_confirm_label">保证金额</string>
    <string name="pay_funcation">支付方式</string>
    <string name="alipay_label">支付宝</string>
    <string name="likely_tips">温馨提示</string>
    <string name="likely_tips_info">保证金在竞拍结束之后，自动原路退回支付宝账户，请放心支付</string>
    <string name="confirm_pay">确认支付</string>
    <string name="max_auction_shares_count">最多可竞拍: %d 万股</string>
    <string name="bid_history_title">出价记录</string>
    <string name="cancel_bond_price">取消报价</string>
    <string name="now_top_price_label">当前最高价</string>
    <string name="pay_count_label">购买数量</string>
    <string name="bid_tip">单次报价不低于200万</string>
    <string name="push_bid_success">出价成功</string>
    <string name="please_input_leggal_price">请输入正确的金额</string>
    <string name="please_input_leggal_count">请输入正确的数量</string>
    <string name="the_bid_max_count">最多出价三次</string>
    <string name="my_auction_title">我的竞拍</string>
    <string name="starting_price_label">起拍价: %s</string>
    <string name="intention_price_label">意向价格: %s</string>
    <string name="to_pay_the_deposit">待支付保证金</string>
    <string name="now_top_price">当前最高价 %s</string>
    <string name="auction_fail_label">竞拍失败</string>
    <string name="auction_success_label">竞拍成功</string>
    <string name="sold_price_secret">卖出价格: 保密</string>
    <string name="my_deposit_price_status_label">保证金</string>
    <string name="paied_label">已支付</string>
    <string name="no_pay_label">未支付</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="cancel_record">取消录音！</string>
    <string name="record_lenght_too_short">录音时间太短!</string>
    <string name="btn_text_up_send">松开结束</string>
    <string name="btn_text_speak">按住说话</string>
    <string name="please_setting_voice_premission">请到设置中授于录音权限</string>
    <string name="please_input_txt">请输入文字</string>
    <string name="confrim_logout_content">确认退出吗？</string>
    <string name="confirm_label">确定</string>
    <string name="cancel_label">取消</string>
    <string name="please_input_legal_voice">请输入语音</string>
    <string name="activity_notify_messages_title">消息提醒</string>
    <string name="just_auction_start">即将开拍</string>
    <string name="just_auction_success">竞拍成功</string>
    <string name="voice_content_sample">[语音]</string>
    <string name="wechat_login_fail">微信登录失败</string>
    <string name="fragment_thrid_bind_phone">绑定手机号</string>
    <string name="alipay_fail_toast">支付失败</string>
    <string name="click_add_photo">点击添加</string>
    <string name="scan_card_label">扫码识别</string>
    <string name="upload_card_label">上传名片</string>
    <string name="update_contact_card_bottom_tips">请保证名片的完整性，方便系统或人工识别</string>
    <string name="bid_count_label">%d次叫价</string>
    <string name="bid_count_label1">叫价%d次</string>
    <string name="partner_plan_title">合伙人计划</string>
    <string name="no_auction_message_tip">您还没有开拍提醒</string>
    <string name="no_auction_success_message_tip">您还没有参与竞拍</string>
    <string name="message_empty_tips">您还没有新的消息哦</string>
    <string name="attention_title">感兴趣</string>
    <string name="no_bid_wait_for_auction_start">当前还没开始出价，请等待开拍</string>
    <string name="new_bid_label">最新出价(%s)</string>
    <string name="unknow_industry">未知行业</string>
</resources>